<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">C Programming</string>
    <string name="action_settings">Settings</string>
    <string name="btnProgramsList">PROGRAMS LIST</string>
    <string name="btnViewAll">VIEW ALL</string>
    <string name="btnSaveAll">SAVE ALL</string>
    <string name="btnContact">CONTACT</string>
    <string name="btnAbout">ABOUT</string>
    <string name="tvSplashTitle">C Programming</string>
    <string name="tvSplashDesc">Your complete source of solved C program examples!</string>
    <string name="btnIncrease">+</string>
    <string name="btnShare">Share</string>
    <string name="btnDecrease">-</string>
    <string name="btnCopy">COPY</string>
    <string name="btnFontColor">FONT COLOR</string>
    <string name="tvVersion">C Programming Version 1.0</string>
    <string name="tvCreate">C Programming is an Android application contains 100s of solved C programs including the outputs. All the programs have been tested and are bug free which can be used for reference and learning the C. You can share any program with your friends through Email, Message, and social networks such as Watsapp. This app also gives you the ability to save all the programs on your device SD card and transfer them to your PC or Laptop. For any feedback and request please use the contact page or send us an email to info@csarchive.net.</string>
    <string name="tvInfo">&#169; All Rights Reserved</string>
    <string name="tvIntro">For any enquiry and feedback, simply fill the form below and send us an email. Your valuable suggestion for further enhancement of this application will be gratefully accepted.</string>
    <string name="tvEmail">Email: info@csarchive.net</string>
    <string name="tvName">Name</string>
    <string name="tvSubject">Subject</string>
    <string name="tvMessage">Message</string>
    <string name="btnSend">SEND</string>
    <string name="tvList">Programs List</string>
    <string name="tvSave">Press the button below to save all the programs on your device\'s SD card.</string>
    <string name="ivSearch">Search</string>
    <string name="etSearch">Search this list</string>
    <string name="btnMainMenu">MENU</string>
    <string name="btnExit">EXIT</string>
    <string name="btnClose">CLOSE</string>
    <string name="btnOutput">OUTPUT</string>
    <string name="tvSearch">Search for a Program</string>
    <string name="btnSearch">SEARCH</string>
    <string name="etSearchMain">Enter your search here</string>
    <string name="ivToast">Search Result</string>
    <string name="btnSave">SAVE</string>
    <string name="programs">PROGRAMS</string>

</resources>
