<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" 
    android:background="#198CFF"
    android:padding="20dp"
    android:orientation="vertical" >
    
    <LinearLayout
        android:weightSum="6"
        android:layout_marginBottom="10dp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/btnIncrease"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="2dp"
            android:background="#324065"
            android:textColor="#ffffff"
            android:text="@string/btnIncrease"
            android:textSize="30sp"
            android:textStyle="bold"
            android:layout_weight="1" />
        
        <ImageButton
            android:id="@+id/btnShare"
            android:src="@drawable/ic_action_share"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:layout_marginLeft="1dp"
            android:layout_marginRight="1dp"
            android:background="#00308f"
            android:contentDescription="@string/btnShare" />

        <Button
            android:id="@+id/btnDecrease"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="2dp"
            android:background="#324065"
            android:textColor="#ffffff"
            android:text="@string/btnDecrease"
            android:textSize="30sp"
            android:textStyle="bold"
            android:layout_weight="1" />

    </LinearLayout>

    <TextView
        android:id="@+id/tvDisplay"
        android:padding="10dp"
        android:background="#D1E8FF"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:lineSpacingExtra="3dp"
        android:layout_weight="1" />
    
    <LinearLayout
        android:weightSum="3"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

    <ImageButton
        android:id="@+id/btnCopy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:background="#9933cc"
        android:padding="8dp"
        android:layout_weight="1"
        android:layout_marginRight="2dp"
        android:src="@drawable/ic_action_copy"
        android:contentDescription="@string/btnCopy" />
    
     <Button
        android:id="@+id/btnOutput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:background="#00308f"
        android:textColor="#ffffff"
        android:padding="5dp"
        android:layout_weight="1"
        android:layout_marginRight="1dp"
        android:layout_marginLeft="1dp"
        android:text="@string/btnOutput" />
    
    <ImageButton 
        android:id="@+id/btnSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="2dp"
        android:textSize="16sp"
        android:background="#9933cc"
        android:padding="8dp"
        android:src="@drawable/ic_action_save"
        android:contentDescription="@string/btnSave"
        android:layout_weight="1" />
     
    </LinearLayout>

</LinearLayout>