<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#198CFF"
    tools:context="net.csarchive.cprogramming.MainMenu" >

<RelativeLayout 
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:padding="40dp" >
    
    <Button
        android:id="@+id/btnProgramsList"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:background="#ec2e4a"
        android:textSize="20sp"
        android:textColor="#ffffff"
        android:gravity="left|center"
        android:drawableLeft="@drawable/ic_action_view_as_list"
        android:drawableRight="@drawable/ic_action_next_item"
        android:padding="10dp"
        android:text="@string/btnProgramsList" />
    
    <Button
        android:id="@+id/btnSaveAll"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnProgramsList"
        android:layout_marginTop="16dp"
        android:background="#9933cc"
        android:drawableLeft="@drawable/ic_action_save"
        android:drawableRight="@drawable/ic_action_next_item"
        android:gravity="left|center"
        android:padding="10dp"
        android:drawablePadding="5dp"
        android:text="@string/btnSaveAll"
        android:textColor="#ffffff"
        android:textSize="20sp" />
    
    <Button
        android:id="@+id/btnSearch"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnSaveAll"
        android:layout_marginTop="16dp"
        android:background="#ff8800"
        android:textSize="20sp"
        android:textColor="#ffffff"
        android:gravity="left|center"
        android:drawableLeft="@drawable/ic_action_search"
        android:drawableRight="@drawable/ic_action_next_item"
        android:padding="10dp"
        android:drawablePadding="5dp"
        android:text="@string/btnSearch" />

    <Button
        android:id="@+id/btnContact"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnSearch"
        android:layout_marginTop="16dp"
        android:background="#99cc00"
        android:textSize="20sp"
        android:textColor="#ffffff"
        android:gravity="left|center"
        android:drawableLeft="@drawable/ic_action_email"
        android:drawableRight="@drawable/ic_action_next_item"
        android:padding="10dp"
        android:drawablePadding="5dp"
        android:text="@string/btnContact" />
    
    <Button
        android:id="@+id/btnAbout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnContact"
        android:layout_marginTop="16dp"
        android:background="#00c5f9"
        android:textSize="20sp"
        android:textColor="#ffffff"
        android:gravity="left|center"
        android:drawableLeft="@drawable/ic_action_about"
        android:drawableRight="@drawable/ic_action_next_item"
        android:padding="10dp"
        android:drawablePadding="5dp"
        android:text="@string/btnAbout" />
    
    <Button
        android:id="@+id/btnExit"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnAbout"
        android:layout_marginTop="16dp"
        android:background="#00308f"
        android:textSize="20sp"
        android:textColor="#ffffff"
        android:gravity="left|center"
        android:drawableLeft="@drawable/ic_action_cancel"
        android:drawableRight="@drawable/ic_action_next_item"
        android:padding="10dp"
        android:drawablePadding="5dp"
        android:text="@string/btnExit" />

</RelativeLayout>

</ScrollView>