<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_gravity="center"
    android:padding="20dp"
    android:background="#198CFF"
    android:orientation="vertical" >

    <LinearLayout 
        android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	android:layout_gravity="center"
    	android:layout_marginBottom="5dp"
    	android:orientation="horizontal" >

    <Button
        android:id="@+id/btnMainMenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="#00308f"
        android:textColor="#ffffff"
        android:gravity="left|center"
        android:layout_marginRight="2dp"
        android:drawableLeft="@drawable/menu"
        android:drawablePadding="10dp"
        android:paddingLeft="10dp"
        android:text="@string/btnMainMenu" />

    <Button
        android:id="@+id/btnProgramsList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#ec2e4a"
        android:layout_marginLeft="2dp"
        android:layout_weight="1"
        android:textColor="#ffffff"
        android:gravity="left|center"
        android:drawableLeft="@drawable/ic_action_view_as_list"
        android:drawablePadding="5dp"
        android:paddingLeft="10dp"
        android:text="@string/programs" />
    
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	android:layout_gravity="center"
    	android:layout_marginBottom="10dp"
    	android:orientation="horizontal" >

    <ImageView
        android:id="@+id/ivSearch"
        android:contentDescription="@string/ivSearch"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:background="#D1E8FF"
        android:src="@drawable/ic_action_search_dark" />

    <EditText
        android:id="@+id/etSearch"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:padding="5dp"
        android:singleLine="true"
        android:background="#D1E8FF"
        android:hint="@string/etSearch"
        android:ems="10" /> 

    </LinearLayout>
    
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:padding="20dp"
        android:background="#D1E8FF"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/tvListTitle"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text=""
            android:gravity="center"
            android:background="#00c5f9"
            android:textColor="#ffffff"
            android:padding="10dp"
            android:layout_marginBottom="5dp"
            android:textAppearance="?android:attr/textAppearanceLarge" />

    <ListView
        android:id="@android:id/list"
        android:layout_width="fill_parent"
        android:background="#198CFF"
        android:layout_height="fill_parent" />
    
    </LinearLayout>

</LinearLayout>